--- a/css/style.css
+++ b/css/style.css
@@ -70,6 +70,38 @@ h2 {
     font-weight: 700;
 }
 
+.normalButton {
+    background: #b8cd06;
+    color: white;
+}
+
+.normalButton:hover {
+    background: white;
+    color: #b8cd06;
+    box-shadow: 0 0 10px 5px rgba(184, 205, 7, 0.5);
+}
+
+.blackButton {
+    background: black;
+    color: white;
+}
+
+.blackButton:hover {
+    background: white;
+    color: black;
+    box-shadow: 0 0 10px 5px rgba(0, 0, 0, 0.5);
+}
+
+.whiteButton {
+    background: white;
+    color: #888888;
+}
+
+.whiteButton:hover {
+    background: #b8cd06;
+    color: white;
+}
+
 .badgePosition {
     background: #b8cd06;
     top: 10px;
@@ -270,17 +302,6 @@ h2 {
 
 .tag2:hover {
     background: #b8cd06;
-}
-
-.normalButton {
-    background: #b8cd06;
-    color: white;
-}
-
-.normalButton:hover {
-    background: white;
-    color: black;
-    border-color: black;
 }
 
 .dropend:hover .dropdown-menu {
