--- a/css/style.css
+++ b/css/style.css
@@ -68,6 +68,8 @@ h2 {
     font-family: "Raleway", sans-serif;
     font-size: 14px;
     font-weight: 700;
+    padding: 0;
+    margin: 0;
 }
 
 .normalButton {
@@ -121,7 +123,7 @@ h2 {
 #accordion1 a, #accordion2 a {
     font-family: "Raleway", sans-serif;
     font-size: 11px;
-    font-weight: 400;
+    font-weight: 700;
     text-decoration: none;
     color: black;
 }
