--- a/css/style.css
+++ b/css/style.css
@@ -56,6 +56,20 @@ main {
     font-size: 30px;
 }
 
+/* COLORS */
+
+.backgroundColor1 {
+    background-color: #b8cd06;
+}
+
+.backgroundColor2 {
+    background-color: #343434;
+}
+
+.textColor1 {
+    color: #b8cd06;
+}
+
 /* AFZONDERLIJKE INSTELLINGEN */
 
 header p {
@@ -72,6 +86,7 @@ h2 {
     margin: 0;
 }
 
+/* Styling van bepaalde knoppen op de pagina. */
 .normalButton {
     background: #b8cd06;
     color: white;
@@ -104,10 +119,20 @@ h2 {
     color: white;
 }
 
+/* Positie voor de badges bij de winkelmand apart aanmaken. */
 .badgePosition {
     background: #b8cd06;
     top: 10px;
     left: 30px;
+}
+
+/* Afzonderlijke instellingen voor de filter accordion elementen. */
+#accordion1 a, #accordion2 a {
+    font-family: "Raleway", sans-serif;
+    font-size: 11px;
+    font-weight: 700;
+    text-decoration: none;
+    color: black;
 }
 
 .accordion-button {
@@ -120,14 +145,7 @@ h2 {
     padding-right: 0;
 }
 
-#accordion1 a, #accordion2 a {
-    font-family: "Raleway", sans-serif;
-    font-size: 11px;
-    font-weight: 700;
-    text-decoration: none;
-    color: black;
-}
-
+/* Navbar laten meescrollen, met extra instellingen voor soepelheid en netheid. */
 #mainHeader.scrolled {
     margin-bottom: 110px;
 }
@@ -162,11 +180,13 @@ h2 {
     color: white;
 }
 
+/* Een class voor een groene kleureffect, vaak gebruikt op afzonderlijke tekstelementen met links. */
 .hoverItem:hover {
     color: #b8cd06 !important;
     transition: color 0.3s ease;
 }
 
+/* Extra instellingen voor formulieren. */
 .form-check-label {
     font-family: "Raleway", sans-serif;
     font-size: 11px;
@@ -179,6 +199,7 @@ h2 {
     cursor: pointer;
 }
 
+/* Instellingen voor de 'tag' knopjes op de pagina. */
 .tag {
     font-family: "Raleway", sans-serif;
     font-size: 10px;
@@ -196,6 +217,24 @@ h2 {
     background: #b8cd06
 }
 
+.tag2 {
+    font-family: "Raleway", sans-serif;
+    font-size: 10px;
+    font-weight: 300;
+    text-decoration: none;
+    color: lightgray;
+    background: #424242;
+    border: none;
+    padding: 10px;
+    margin-right: 5px;
+    margin-bottom: 7px;
+}
+
+.tag2:hover {
+    background: #b8cd06;
+}
+
+/* Styling voor de ronde knopjes op de carousel. */
 .carouselButton {
     height: 15px !important;
     width: 15px !important;
@@ -203,7 +242,7 @@ h2 {
     margin-bottom: 25px;
 }
 
-.carouselButton + .active {
+.carouselButton.active {
     background-color: #b8cd06 !important;
 }
 
@@ -213,10 +252,8 @@ h2 {
     left: 550px;
 }
 
-.textColor1 {
-    color: #b8cd06;
-}
 
+/* Extra instellingen voor de cards met de producten erin, met een overlay erop die alles vervaagt en knopjes naar de voorgrond brengt. */
 .card-body {
     border-color: rgba(0,0,0,0.04);
     overflow: hidden;
@@ -268,6 +305,7 @@ h2 {
     font-size: 11px;
 }
 
+/* Instellingen voor het email inputveld. */
 #emailInput {
     width: 120px;
 }
@@ -283,38 +321,14 @@ h2 {
 
 #emailButton:hover {
     background-color: white;
-}
-
-.backgroundColor1 {
-    background-color: #b8cd06;
-}
-
-.tag2 {
-    font-family: "Raleway", sans-serif;
-    font-size: 10px;
-    font-weight: 300;
-    text-decoration: none;
-    color: lightgray;
-    background: #424242;
-    border: none;
-    padding: 10px;
-    margin-right: 5px;
-    margin-bottom: 7px;
-}
-
-.tag2:hover {
-    background: #b8cd06;
-}
-
-.dropend:hover .dropdown-menu {
-    display: block;
-    margin-left: 320px;
-    background-color: gray;
+    box-shadow: 0 0 10px 5px rgba(255, 255, 255, 0.5);
+    transition: box-shadow 0.3s;
 }
 
 /* MEDIA QUERIES*/
-/* Large devices (desktops, 992px and up) */
+/* Deze instellingen enkel gebruiken op grote schermen van 992+ pixels. */
 @media (min-width: 992px) {
+    /* Het email inputveld krijgt andere afmetingen op grotere schermen, voor een betere weergave. */
     #emailInput {
         width: 200px;
         height: 50px;
